--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,7 +8,16 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.0.4"
+django-cors-headers = "^4.3.1"
+djangorestframework = "^3.15.1"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^5.0.0"
+bandit = "^1.7.8"
+safety = "^3.1.0"
+ruff = "^0.4.2"
+pre-commit = "^3.7.0"
 
 [build-system]
 requires = ["poetry-core"]
