--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.0.4"
 django-cors-headers = "^4.3.1"
 djangorestframework = "^3.15.1"
 pillow = "^10.3.0"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
